# time-masternode

./: .gitattributes  .gitignore  AI_IMPLEMENTATION_SUMMARY.md  AVALANCHE_ACTIVATION.md  AVALANCHE_ACTIVATION_COMPLETE.md  BFT_DEPLOYMENT.md  BFT_REMOVAL_SUMMARY.md  BUGFIX_SUMMARY.md  CATCHUP_COMMENTS_UPDATE.md  CATCHUP_CONSENSUS_DESIGN.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  CODE_CHANGES.md  COLLATERAL_BUGS_SUMMARY.md  COMPLETE_FORK_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  Cargo.toml  DEADLOCK_ANALYSIS.md  DEPLOYMENT_INSTRUCTIONS.txt  DEPLOY_MASTERNODE_FIX.md  DETAILED_CODE_ANALYSIS.md  DOCUMENTATION.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FORK_ANALYSIS.md  FORK_RESOLUTION_DEPLOYMENT.md  FORK_RESOLUTION_DUPLICATION.md  FORK_RESOLUTION_FIX.md  FORK_RESOLUTION_FIXES.md  FORK_RESOLUTION_FIXES_SUMMARY.md  FORK_RESOLUTION_IMPLEMENTATION.md  FORK_RESOLUTION_QUICKREF.md  GENESIS_RETRY_FIX.md  GENESIS_SYNC_FIX.md  GIT_COMMANDS.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  (+62 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: my-agent.agent.md
analysis/: 2026-01-01-fork-resolution-improvements.md  2026-01-12_FORK_RESOLUTION_VRF_IMPLEMENTATION.md  2026-01-12_FULL_VRF_IMPLEMENTATION.md  2026-04-05_POOL_DISTRIBUTION_ATTACK_VECTORS.md  ARCHITECTURE_OVERVIEW.md  ATTESTATION_PROGRESS.md  AVALANCHE_CONSENSUS_ARCHITECTURE.md  AVALANCHE_IMPLEMENTATION.md  BFT_CATCHUP_SUMMARY.md  BINARY_SIZE_OPTIMIZATION.md  BUG_FLOW_DIAGRAM.txt  CATCHUP_ALGORITHM.md  CATCHUP_BLOCKS_ANALYSIS.md  CATCHUP_CONSENSUS_FIX.md  CHANGELOG_DEC_23_2024.md  CHECKPOINT_UTXO_ROLLBACK_IMPLEMENTATION.md  CODE_LOCATIONS_REFERENCE.txt  COMPILATION_COMPLETE_QUICK_REFERENCE.md  COMPLETE_CODE_SNIPPETS.txt  COMPLETE_FIX_SUMMARY.md  CONNECTION_DESIGN_VERIFICATION.md  CRITICAL_FIXES_CHECKLIST.md  CRITICAL_GENESIS_FIXES.md  CRYPTOGRAPHY_DECISIONS.md  CRYPTOGRAPHY_DESIGN.md  CURRENT_BLOCK_PRODUCTION.md  DATA_DIRECTORY_UPDATE.md  DEADLOCK_ANALYSIS.md  DEAD_CODE_ACTION_PLAN.md  DEAD_CODE_ANALYSIS.md  DEAD_CODE_REMOVAL_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DETERMINISM_BEST_PRACTICES.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINALIZED_TX_ANALYSIS.txt  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FORK_INCIDENT_ANALYSIS.md  (+71 more)
analysis/_archive/: 000_MASTER_STATUS.md  00_DELIVERY_SUMMARY_2025_12_22.md  00_MASTER_INDEX_2025-12-22.md  00_START_HERE_2025-12-21.md  00_START_HERE_DEPLOYMENT.md  2024-12-13-bft-implementation-summary.md  2024-12-18-peer-registry-fix.md  2024-12-18-ping-pong-diagnosis.md  ACTION_ITEMS.md  ACTION_ITEMS_2025-12-19.md  ACTION_PLAN_2025_12_22.md  ANALYSIS_DOCUMENTATION_INDEX.md  AVALANCHE_INTEGRATION_COMPLETE_DEC_23.md  AVALANCHE_MIGRATION_STRATEGY.md  BFT_CATCHUP_IMPLEMENTATION.md  BFT_INTEGRATION_COMPLETE.md  BFT_REMOVAL_COMPLETE_DEC_23_2024.md  BFT_TO_AVALANCHE_MIGRATION.md  BLOCK_TIME_OPTIMIZATION.md  BUGFIX_FORK_ROLLBACK.md  CODE_CLEANUP_COMPLETE_2025-12-19.md  CODE_QUALITY_VERIFICATION_2025-12-20.md  COMBINED_SUMMARY_DEC_15-17_2025.md  COMPILATION_COMPLETE_FINAL.md  COMPILATION_FIX_SESSION_REPORT.md  COMPLETE_ANALYSIS_2025-12-19.md  COMPLETE_CHANGES_SUMMARY_2025-12-17.md  COMPLETE_PROJECT_INDEX.md  COMPLETE_PROJECT_STATUS_2025-12-20.md  COMPLETE_ROADMAP_UPDATED.md  COMPLETE_UPDATE_SUMMARY.md  (+259 more)
benches/: validation_bench.rs
data/: db  snap.0000000000000389
docs/: AI_IMPLEMENTATION_SUMMARY.md  AI_OPPORTUNITIES.md  AI_PEER_SELECTION.md  AI_SYSTEM.md  ANALYSIS_RECOMMENDATIONS_TRACKER.md  ARCHITECTURE_OVERVIEW.md  BUILD_STATUS.md  CLI_COMPLETE.md  CLI_GUIDE.md  COMPLETE_FLOW.md  COMPREHENSIVE_SECURITY_AUDIT.md  CONSENSUS_IMPROVEMENT_PROPOSAL.md  CONSENSUS_UPDATE_SUMMARY.md  CONTRIBUTING.md  CRYPTOGRAPHY_RATIONALE.md  DATABASE_RESET.md  DEMO_OPTIONAL.md  DEVELOPMENT_UPDATE.md  ENHANCED_SUMMARY.md  FEES.md  FEE_COLLECTION_MECHANISM.md  FORK_ANALYSIS.md  FORK_RECOVERY_GUIDE.md  FORK_RESOLUTION.md  FORK_RESOLUTION_ANALYSIS.md  FORK_RESOLUTION_COMPREHENSIVE_JANUARY_2026.md  FORK_RESOLUTION_GUIDE.md  HEARTBEAT_ATTESTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_ADDENDUM.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTANT_FINALITY.md  INTEGRATION_QUICKSTART.md  LINUX_INSTALLATION.md  LOGGING_IMPROVEMENTS.md  MASTERNODE_GUIDE.md  MASTERNODE_REWARD_ROTATION.md  MASTERNODE_TIERS.md  (+32 more)
scripts/: README.md  auto-update.service  auto-update.sh  auto-update.timer  backup-node.sh  change-hostname.sh  check-rewards.sh  check_node_state.sh  configure-masternode.bat  configure-masternode.sh  cpctest.sh  dashboard.bat  dashboard.sh  deploy-config.bat  deploy-config.sh  deploy_fork_fixes.sh  deploy_genesis_fix.sh  deploy_utxo_fix.sh  diagnose_fork.sh  diagnose_fork_state.sh  diagnose_forks.sh  diagnose_status.sh  emergency_recovery.sh  health-check.sh  install-masternode.bat  install-masternode.sh  install.sh  mempool-backup.sh  mempool-restore.sh  migrate-systemd.sh  migrate-watchdog-to-systemd.sh  mn-watchdog.service  mn-watchdog.sh  node-monitor.sh  quick_check.sh  register-masternode.sh  reindex.sh  reset-blockchain.sh  reset-chain.sh  reset-testnet-db.sh  (+24 more)
src/: address.rs  app_builder.rs  app_context.rs  app_utils.rs  avalanche.rs  avalanche_consensus.rs  avalanche_handler.rs  avalanche_tx_handler.rs  bft_consensus.rs  block_cache.rs  blockchain.rs  blockchain_error.rs  blockchain_validation.rs  config.rs  consensus.rs  constants.rs  error.rs  finality_proof.rs  governance.rs  heartbeat_attestation.rs  http_client.rs  lib.rs  main.rs  masternode_authority.rs  masternode_certificate.rs  masternode_registry.rs  memo.rs  network_type.rs  peer_manager.rs  purge_list.rs  reward_calculator.rs  shutdown.rs  state_notifier.rs  storage.rs  time_sync.rs  timelock.rs  timevote.rs  transaction_pool.rs  transaction_priority.rs  transaction_selection.rs  (+6 more)
tests/: TESTING_QUICK_START.md  consensus_security.rs  edge_cases.rs  finalized_transaction_protection.rs  fork_resolution.rs  multi_node_consensus.rs  security_audit.rs  stress_tests.rs  timeproof_conflict_detection.rs  transaction_flow_test_plan.md
(+100 files in other folders)
