[package]
name = "timed"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "timed"
path = "src/lib.rs"

[[bin]]
name = "timed"
path = "src/main.rs"

[[bin]]
name = "time-cli"
path = "src/bin/time-cli.rs"

[dependencies]
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "signal"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
sled = "0.34"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
hex = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
num-bigint = "0.4"
dirs = "5.0"
sysinfo = "0.30"
hostname = "0.4"
socket2 = "0.5"
tokio-util = "0.7"

# Critical security enhancements
blake3 = "1.5"                                      # Fast cryptographic hashing
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory cleanup
subtle = "2.5"                                      # Constant-time comparisons
tokio-rustls = "0.26"                              # TLS for encrypted transport
rustls = "0.23"                                     # TLS library
rustls-pemfile = "2.1"                             # PEM file parsing
rcgen = "0.13"                                      # Self-signed cert generation
bytes = "1.5"                                       # Byte buffer utilities

# Performance optimizations (Critical)
dashmap = "5.5"                                     # Lock-free concurrent hashmap
lru = "0.12"                                        # Bounded LRU cache
rayon = "1.8"                                       # Data parallelism
parking_lot = "0.12"                                # Faster locks than std
arc-swap = "1.7"                                    # Lock-free atomic pointer swapping
scopeguard = "1.2"                                  # RAII guards for cleanup

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[build-dependencies]
chrono = "0.4"
