[package]
name = "timed"
version = "1.4.7"
edition = "2021"
rust-version = "1.75"

[lib]
name = "timed"
path = "src/lib.rs"

[[bin]]
name = "timed"
path = "src/main.rs"

[[bin]]
name = "time-cli"
path = "src/bin/time-cli.rs"

[[bin]]
name = "time-dashboard"
path = "src/bin/time-dashboard.rs"
required-features = ["dashboard"]

[features]
default = []
dashboard = ["ratatui", "crossterm"]

[dependencies]
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "signal",
    "process"
], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.0", features = ["serde"] }
curve25519-dalek = "4.1"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sled = "0.34"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
hex = "0.4"
base64 = "0.22"
toml = "0.8"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hostname = "0.4"
tokio-util = "0.7"

# Wallet encryption (Phase 2 Critical Security)
aes-gcm = "0.10"                                    # AES-256-GCM encryption
argon2 = "0.5"                                       # Password-based key derivation
x25519-dalek = { version = "2.0", features = ["static_secrets"] }  # ECDH key exchange for encrypted memos
urlencoding = "2.1"                                  # URI percent-encoding for payment requests

# Critical security enhancements
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory cleanup
subtle = "2.5"                                      # Constant-time comparisons
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }  # TLS for encrypted transport
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }  # TLS library (ring-only, no aws-lc-sys)
rustls-pemfile = "2.1"                             # PEM file parsing
webpki-roots = "0.26"                              # Root CA certs for external HTTPS connections
rcgen = "0.13"                                      # Self-signed cert generation
bytes = "1.5"                                       # Byte buffer utilities

# Performance optimizations (Critical)
dashmap = "5.5"                                     # Lock-free concurrent hashmap
lru = "0.12"                                        # Bounded LRU cache
parking_lot = "0.12"                                # Faster locks than std
zstd = "0.13"                                       # Fast compression for block storage

# Network
socket2 = "0.6"                                     # Socket configuration

# WebSocket support for real-time wallet notifications
tokio-tungstenite = "0.26"                          # WebSocket server
futures-util = "0.3"                                # Stream utilities for WebSocket

# TUI dashboard dependencies (optional — only needed for time-dashboard binary)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "validation_bench"
harness = false

[profile.release]
lto = "fat"           # Changed from "thin" to "fat" for more aggressive optimization
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3         # Maximum optimization
overflow-checks = false  # Disable overflow checks in release

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[build-dependencies]
chrono = "0.4"
